tests/baselines/reference/objectTypeHidingMembersOfObjectAssignmentCompat2.errors.txt
tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat2.ts(7,1): error TS2322: Type 'I' is not assignable to type 'Object'.
  Types of property 'toString' are incompatible.
    Type '() => 数字' is not assignable to type '() => 文字'.
      Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat2.ts(8,1): error TS2322: Type 'Object' is not assignable to type 'I'.
  The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
    Types of property 'toString' are incompatible.
      Type '() => 文字' is not assignable to type '() => 数字'.
        Type '文字' is not assignable to type '数字'.
tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat2.ts(14,1): error TS2322: Type 'C' is not assignable to type 'Object'.
  Types of property 'toString' are incompatible.
    Type '() => 数字' is not assignable to type '() => 文字'.
      Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat2.ts(15,1): error TS2322: Type 'Object' is not assignable to type 'C'.
  The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
    Types of property 'toString' are incompatible.
      Type '() => 文字' is not assignable to type '() => 数字'.
        Type '文字' is not assignable to type '数字'.
tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat2.ts(20,1): error TS2322: Type '{ toString: () => 无值; }' is not assignable to type 'Object'.
  Types of property 'toString' are incompatible.
    Type '() => 无值' is not assignable to type '() => 文字'.
      Type '无值' is not assignable to type '文字'.


==== tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat2.ts (5 errors) ====
    interface I {
        toString(): number;
    }
    
    var i: I;
    var o: Object;
    o = i; // error
    ~
!!! error TS2322: Type 'I' is not assignable to type 'Object'.
!!! error TS2322:   Types of property 'toString' are incompatible.
!!! error TS2322:     Type '() => 数字' is not assignable to type '() => 文字'.
!!! error TS2322:       Type '数字' is not assignable to type '文字'.
    i = o; // error
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'I'.
!!! error TS2322:   The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! error TS2322:     Types of property 'toString' are incompatible.
!!! error TS2322:       Type '() => 文字' is not assignable to type '() => 数字'.
!!! error TS2322:         Type '文字' is not assignable to type '数字'.
    
    class C {
        toString(): number { return 1; }
    }
    var c: C;
    o = c; // error
    ~
!!! error TS2322: Type 'C' is not assignable to type 'Object'.
!!! error TS2322:   Types of property 'toString' are incompatible.
!!! error TS2322:     Type '() => 数字' is not assignable to type '() => 文字'.
!!! error TS2322:       Type '数字' is not assignable to type '文字'.
    c = o; // error
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'C'.
!!! error TS2322:   The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! error TS2322:     Types of property 'toString' are incompatible.
!!! error TS2322:       Type '() => 文字' is not assignable to type '() => 数字'.
!!! error TS2322:         Type '文字' is not assignable to type '数字'.
    
    var a = {
        toString: () => { }
    }
    o = a; // error
    ~
!!! error TS2322: Type '{ toString: () => 无值; }' is not assignable to type 'Object'.
!!! error TS2322:   Types of property 'toString' are incompatible.
!!! error TS2322:     Type '() => 无值' is not assignable to type '() => 文字'.
!!! error TS2322:       Type '无值' is not assignable to type '文字'.
    a = o; // ok